index.html babel update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Juice Indesties</title>
+    <title>Cloud Learning Portfolio</title>
     <link rel="stylesheet" href="styles/main.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -68,7 +68,7 @@
                src="images/example1.png"/>
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered">
-              "Education"
+              Education
             </dt>
             <dd></dd>
           </dl>
