index.html update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
-             href="https://docs.google.com/document/d/1U6HioS36v6rGnewtXClsEAoGrEi0C93tLq5SWdG_59w/edit?usp=sharing">
+             href="file:///Users/igh/Downloads/Issac%20G.%20Henderson%20Resume%20for%20Portfolio%20Web.pdf">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
@@ -56,7 +56,7 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        Juice Industriez "Portfolio"
+        Cloud Learning Portfolio
       </h2>
     </section>
 
@@ -84,7 +84,7 @@
                https://www.flickr.com/photos/ssoosay/4097410999 -->
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered ">
-               Specialty
+               Specialty's
             </dt>
             <dd></dd>
           </dl>
