--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
-             href="file:///Users/igh/Downloads/Issac%20G.%20Henderson%20Resume%20for%20Portfolio%20Web.pdf">
+             href="https://drive.google.com/file/d/19k7dINWxAHx2rdUDOu9VoQPnpj0s707f/view?usp=sharing">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
